Fixed buttons overlapping in home.ejs

--- a/public/styles/form-style.css
+++ b/public/styles/form-style.css
@@ -117,7 +117,7 @@
     }
 
 
-    @media screen and (max-width: 600px) { 
+    @media screen and (max-width: 1200px) { 
     .rightSideBar {
     display: flex;
     flex-direction: row;
